# mo

./: .gitignore  .travis.yml  Makefile  Makefile.am  README.md  autogen.sh  configure.ac  meson.build
docs/reference/: Makefile.am
docs/reference/libmo/: Makefile.am  libmo-docs.xml  meson.build
docs/reference/libmo/xml/: gtkdocentities.ent.in  meson.build
example/: dump.c  sample-query.c
libmo/: mo.h  mo.map  mofile.c  mofile.h  mogroup.c  mogroup.h
src/: mo.c  mo.h
test/ci/: Dockerfile  Dockerfile-autotools  Dockerfile-meson  build-autotools.sh  build-meson.sh  build.sh
